--- a/Uleadz.StaticWeb/Pages/Shared/_WhyUleadz.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_WhyUleadz.cshtml
@@ -294,9 +294,10 @@
             </div>
         </div>
         <div class="group-624">
-            <img class="arrow-right" src="~/lib/img/arrow-right-4@2x.svg" />
-            <div class="flex-col-3">
-                <div class="flex-row-2">
+            <a href="#" class="prev"><img class="arrow-right" src="~/lib/img/arrow-right-4@2x.png" /></a>
+            @*<img class="arrow-right" src="~/lib/img/arrow-right-4@2x.svg" />*@
+            <div class="flex-col-3 side-2">
+                <div class="flex-row-2 pagination">
                     <div class="flex-col-4">
                         <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
                         <div class="you-get-more-than-what-you-pay-for poppins-medium-black-50px">
@@ -313,7 +314,7 @@
                         <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
                     </div>
                 </div>
-                <div class="group-622">
+                <div class="group-622 pagination">
                     <div class="overlap-group1-3">
                         <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
                             &#34;If you are looking to save time and be more organized with your business, this is what you are
@@ -345,8 +346,60 @@
                         </div>
                     </div>
                 </div>
+                @*copy*@
+                <div class="flex-row-2 pagination">
+                    <div class="flex-col-4">
+                        <div class="testimonial poppins-normal-black-14px">TESTIMONIAL</div>
+                        <div class="you-get-more-than-what-you-pay-for poppins-medium-black-50px">
+                            You get more than what<br />you pay for
+                        </div>
+                        <p class="we-will-take-care-of-everything-else poppins-normal-black-16px">
+                            We will take care of everything else
+                        </p>
+                    </div>
+                    <div class="overlap-group-3">
+                        <img class="rectangle-258-1" src="~/lib/img/rectangle-258-1@2x.png" />
+                        @*<img class="rectangle-258" src="~/lib/img/rectangle-258-2@2x.png" />*@
+                        <img class="rectangle-259" src="~/lib/img/rectangle-259-1@2x.png" />
+                        <img class="rectangle-260" src="~/lib/img/rectangle-260-1@2x.png" />
+                    </div>
+                </div>
+                <div class="group-622 pagination">
+                    <div class="overlap-group1-3">
+                        <div class="if-you-are-looking valign-text-middle poppins-normal-black-18px">
+                            &#34;copy If you are looking to save time and be more organized with your business, this is what you are
+                            looking for. Awesome system, very time saving and user friendly! Great to keep your business
+                            organized!&#34;
+                        </div>
+                        <div class="group-618">
+                            <img class="ellipse-42" src="~/lib/img/ellipse-42-2@2x.png" />
+                            <div class="overlap-group-4">
+                                <div class="name valign-text-middle poppins-medium-black-16px">Michael Jones</div>
+                                <div class="home-service-professional valign-text-middle poppins-normal-black-14px">
+                                    Home Service Professional
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="overlap-group2-3">
+                        <div class="until-i-met-uleadz valign-text-middle poppins-normal-black-18px">
+                            &#34;copy Until I met Uleadz I was spending half of my time dealing with calls and jobs management. Now I
+                            have automated it and I don’t need to deal with it anymore, I can invest my time making more
+                            money.&#34;
+                        </div>
+                        <div class="group-619">
+                            <img class="ellipse-42" src="~/lib/img/ellipse-42-3@2x.png" />
+                            <div class="overlap-group-5">
+                                <div class="name valign-text-middle poppins-medium-black-16px">Josh Garcia</div>
+                                <div class="field-technician valign-text-middle poppins-normal-black-14px">Field Technician</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-            <img class="arrow-right-1" src="~/lib/img/arrow-right-3@2x.svg" />
+            <a href="#" class="next"><img class="arrow-right-1" src="~/lib/img/arrow-right-3@2x.svg" /></a>
+            @*<img class="arrow-right-1" src="~/lib/img/arrow-right-3@2x.svg" />*@
         </div>
         <img class="rectangle-206" src="~/lib/img/rectangle-206-1@1x.png" />
 
